User controller using TSOA
